# AILatency

.github/workflows/: deploy-pages.yml
latency_sim/: Cargo.toml  README.md  Trunk.toml  index.html
latency_sim/src/: main.rs
