[package]
name = "latency_sim"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", features = ["glow"] }
egui = "0.29"
egui_plot = "0.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
